// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Another Button with some emoji 1`] = `
<Container>
  <div>
    prefix
     
    <Component>
      <button
        onClick={[Function]}
      >
        <span
          aria-label="so cool"
          role="img"
        >
          😀 😎 👍 💯
        </span>
      </button>
    </Component>
     
    suffix
  </div>
</Container>
`;

exports[`Storyshots Another Button with text 1`] = `
<Container>
  <div>
    prefix
     
    <Component>
      <button
        onClick={[Function]}
      >
        Hello button
      </button>
    </Component>
     
    suffix
  </div>
</Container>
`;

exports[`Storyshots Text Simple 1`] = `
<Container>
  <div>
    prefix
     
    <Component>
      contents
    </Component>
     
    suffix
  </div>
</Container>
`;
